text aligned to correct sides css

--- a/style.css
+++ b/style.css
@@ -5,29 +5,6 @@
     background-color: #fffff2;
 }
 
-@media (min-width:768px){
-    .container{
-        width:80%;
-
-        header{
-            padding:20px;
-        }
-        main{
-            &.flex-container{
-                .features1{
-                    padding:60px 0;
-                    h1{
-                        font-size:2.5em;
-                    }
-                    p{
-                        font-size:1.2em;
-                    }
-
-                }
-            }
-        }
-    }
-}
 
 .container img{
     width:100px;
@@ -72,13 +49,15 @@ nav{
     margin-left:auto;
     margin-right:auto;
     text-align: center;
+    justify-content:center;
 }
 
 .features1 h2{
-    font-family:'Readex Pro', sans-serif;
+    font-family:'Montserrat:@200';
     color: rgb(52, 199, 225);
     font-size:30px;
     top:10px;
+    text-align:Center;
     
 }
 
@@ -92,6 +71,7 @@ nav{
     color: #105496;
     font-size:20px;
     top:10px;
+    text-align:center;
     
 }
 
@@ -99,7 +79,8 @@ nav{
     font-family:'Readex Pro', sans-serif;
     color: rgb(52, 199, 225);
     font-size:20px;
-    top:10px
+    top:10px;
+
     
 }
 
@@ -124,16 +105,29 @@ nav{
     border-width:0.2em;
 }
 
-.features2 h2,h4{
+.features2 h2,h3,h4,h5{
+    font-family:sans-serif;
+    color: #105496;
+    font-size:20px;
+    justify-content:space-around;
+
+}
+.features2 h2{
     margin-left:auto;
     margin-right:auto;
     text-align: Left;
 }
 
+.features2 h4{
+    margin-left:auto;
+    margin-right:auto;
+    text-align: Left;
+}
 .group1{
     margin-left:auto;
     margin-right:auto;
     text-align: Right;
+
 }
 
 .group2{
@@ -142,8 +136,26 @@ nav{
     text-align: Left;
 
 }
-.features2 h3,h5{
+.features2 h3{
     margin-left:auto;
     margin-right:auto;
     text-align: Right;
+}
+
+.features2 h5{
+    margin-left:auto;
+    margin-right:auto;
+    text-align: Right;
+}
+.pill3{   
+    justify-content: center;
+    align-items: center;
+    background-color:#105496;
+    font-display:white;
+    font-size:15px;
+    font-family:'Readex Pro', sans-serif;
+    padding:1em 2em;
+    margin:0.25em;
+    border-radius: 0.5em;
+    border-width:0.2em;
 }
